@@ -6,20 +6,18 @@ public class FluxPackDefaults {
     public final Integer energyInRate;
     public final Integer energyOutRate;
     
-    public final Integer armorDisplay;
-    public final Double armorAbsorption;
+    public final Integer armorReduction;
     public final Integer armorEnergyPerHit;
     
     public final Boolean enchantable;
     public final Integer enchantability;
     
-    public FluxPackDefaults(Integer energyCapacity, Integer energyInRate, Integer energyOutRate, Integer armorDisplay, Double armorAbsorption, Integer armorEnergyPerHit, Boolean enchantable, Integer enchantability) {
+    public FluxPackDefaults(Integer energyCapacity, Integer energyInRate, Integer energyOutRate, Integer armorReduction, Integer armorEnergyPerHit, Boolean enchantable, Integer enchantability) {
         this.energyCapacity = energyCapacity;
         this.energyInRate = energyInRate;
         this.energyOutRate = energyOutRate;
         
-        this.armorDisplay = armorDisplay;
-        this.armorAbsorption = armorAbsorption;
+        this.armorReduction = armorReduction;
         this.armorEnergyPerHit = armorEnergyPerHit;
         
         this.enchantable = enchantable;
