@@ -2,7 +2,8 @@
 Version 1.3.2
 (unreleased)
 ----------------------------------
-- Fixed major bug in jetpack armor that could nullify armor values
+- Armor is now properly configurable by reduction amounts
+- Fixed major bug in armor that could negate armor values
 - Fixed energy HUD scale affecting other mod HUDs
 
 
